--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> tamim portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <section class="top-banner">
+    
+    <div class="half-width">
+      <h1>Welcome to </h1>
+    <h1> <span class="orange-color">tamim</span> World!</h1>
+    <h3>assalamu alaikum warahmatullah</h3>
+    <p> Hi i am abdus subhan tamim .i study in qawni madrasha .my madrasha name is jamiya islami darul ulom madaniya jatrabari dhaka 1204.i have 5 sisters .i live in kishorganj at kuliarchar.i want be a web developer in 2022 inshallah.</p>
+    <a class="link-button" target="-blank" href="http://www.facebook.com">HIRE ME</a>
+    </div>
+   
+   <div class="half-width"><img src="images/my-bg.png" alt=""></div>
+  </section>
   
 </body>
 </html>
