dream big added

--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
    
    <div class="half-width"><img src="images/my-bg.png" alt=""></div>
   </section>
+  <section class="dream-big">
+
+    <div class="half-width">
+      <img src="images/my-bg.png" alt="">
+    </div>
+    <div class="half-width">
+      <h1>dream big </h1>
+      <h2>become a developer</h2>
+      <p>i already learned besic HTNL and CSS.i can create simple website by HTNL amd CSS .i will learn java,react,note,js,mongodb,woodrpress.inshallah </p>
+      <a class="link-button" target="-blank" href="">DOWNLOAD RESUME</a>
+    </div>
+  </section>
   
 </body>
 </html>
