--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <section class="top-banner">
+  <section class="top-banner flexible-container">
     
     <div class="half-width">
       <h1>Welcome to </h1>
@@ -24,7 +24,7 @@
    
    <div class="half-width"><img src="images/my-bg.png" alt=""></div>
   </section>
-  <section class="dream-big">
+  <section class="dream-big flexible-container">
 
     <div class="half-width">
       <img src="images/my-bg.png" alt="">
@@ -35,6 +35,25 @@
       <p>i already learned besic HTNL and CSS.i can create simple website by HTNL amd CSS .i will learn java,react,note,js,mongodb,woodrpress.inshallah </p>
       <a class="link-button" target="-blank" href="">DOWNLOAD RESUME</a>
     </div>
+  </section>
+
+  <section class="experenca-area">
+    <h1>experiences</h1>
+      <div class="flexible-container">
+
+        <div class="half-width">
+      
+          <h1>full stack web developer</h1>
+          <h3>2022-present ! pro level developer</h3>
+          <p>i am the master of HTML,CSS and javasrcipt.i know everything needded to make a website function i am the master of HTML,CSS and javasrcipt.i know everything needded to make a website function</p>
+        </div>
+        <div class="half-width">
+          <h1>baby web developer</h1>
+          <h3>2022-2023 | hero learner developer</h3>
+          <p> they did not offer me a job.but i made myself as a remove web developer they did not offer me a job.but i made myself as a remove web developerthey did not offer me a job.but i made myself as a remove web developer </p>
+  
+        </div>
+      </div>
   </section>
   
 </body>
