--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
     <h1>experiences</h1>
       <div class="flexible-container">
 
-        <div class="half-width">
+        <div id="full-stack-developer" class="experience-item">
       
-          <h1>full stack web developer</h1>
+          <h1 class="orange-color">full stack web developer</h1>
           <h3>2022-present ! pro level developer</h3>
           <p>i am the master of HTML,CSS and javasrcipt.i know everything needded to make a website function i am the master of HTML,CSS and javasrcipt.i know everything needded to make a website function</p>
         </div>
-        <div class="half-width">
-          <h1>baby web developer</h1>
+        <div id="baby-developer" class="experience-item">
+          <h1 class="orange-color">baby web developer</h1>
           <h3>2022-2023 | hero learner developer</h3>
           <p> they did not offer me a job.but i made myself as a remove web developer they did not offer me a job.but i made myself as a remove web developerthey did not offer me a job.but i made myself as a remove web developer </p>
   
@@ -57,4 +57,5 @@
   </section>
   
 </body>
+<footer>© Peter Parker 2023, a Programming Hero initiative.</footer>
 </html>
